reactor en factory por warning